# joing2-discord-bot

./: .env.example  .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: error.rs  main.rs
src/delete/: mod.rs
src/games/: mod.rs
src/games/lol/: history.rs  mod.rs  tools.rs
src/mention/: mod.rs
src/random/: mod.rs
