[package]
name = "joing2-discord-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
regex = "1"
rand = "0.8.4"
indoc = "1.0"
futures = "0.3.19"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
urlencoding = "2.1.0"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    # "framework",
    "gateway",
    "http",
    "model",
    # "standard_framework",
    "utils",
    "rustls_backend",
    "unstable_discord_api"
]
version = "0.10"